2011-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use Guile-BAUX for init snarfing.

	* Makefile.am (SUFFIXES): Delete var.
	(.c.x): Use ‘$(gx) c2x’ instead of $(c2x).

2011-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use Guile-BAUX for doc snarfing.

	* Makefile.am: include .../common.mk.
	(dotdocfiles): Delete var.
	(SUFFIXES): Remove .doc.
	(.c.doc, .scm.doc): Delete old-style suffix rules.
	[MAINTAINER_MODE] (BUILT_SOURCES): Remove $(dotdocfiles).
	[MAINTAINER_MODE] (.doc-index): Delete target.
	[MAINTAINER_MODE] (noinst_DATA): Remove .doc-index; add all.tsar.
	[MAINTAINER_MODE] (all.tsar, libpq.tsar, scheme.tsar): New targets.
	(DISTCLEANFILES): Remove *.doc.

2010-11-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres-qcons) proc: idquote

	* postgres-qcons.scm (idquote): New proc, exported.
	(maybe-dq): Use ‘idquote’.

2010-07-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Fix bug: Extract documentation from Scheme source.

	Regression introduced 2009-06-21,
	"Minimize "make -C doc/" work in default case".
	* Makefile.am (dotdocfiles): Add $(schemestems:%=%.doc).

2010-06-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C int] Avoid signed/unsigned comparison.

	* libpq.c (lob_fill_input): Simplify ‘lo_read’ rv handling.

2010-06-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Sync snapshot files with Guile 1.4.1.119.

	* modsup.h.snap: Sync with Guile 1.4.1.119.

2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.39 (tag v0.39)

2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	No longer accept keyword for `pg-parameter-status' PARM arg.

	* libpq.c (pg_parameter_status):
	No longer accept keyword for PARM arg.

2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Drop procs `pg-set-client-data!', `pg-get-client-data'.

	* libpq.c (xc_t): Delete member `client'.
	(xc_mark): Update.
	(CONN_CLIENT): Delete cpp macro.
	(pg_connectdb): Update.
	(pg_get_client_data, pg_set_client_data): Delete funcs.
