@@ -56,19 +56,9 @@ scheme.tsar: $(schemestems:=.scm)
 
 endif # MAINTAINER_MODE
 
-retired = $(GUILE_SITE)/database
-
 install-data-hook:
-	rm -f $(ddir)/postgres-sup.*
 	$(top_srcdir)/build-aux/sofix $(SOFIXFLAGS) \
 	  $(DESTDIR)$(ddir) $(d_LTLIBRARIES)
-	if [ -d "$(retired)" ] ; then		\
-	  cd "$(retired)" ;			\
-	  rm -f postgres.scm $(dist_d_DATA) ;	\
-	  if [ "`ls 2>/dev/null`" = "" ] ; then	\
-	    cd .. ; rmdir "$(retired)" ; fi ;	\
-	  $(mkmodcat) "$(GUILE_SITE)" ;		\
-	fi
 
 EXTRA_DIST = modsup.h
 
