@@ -1,3 +1,14 @@
+2011-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[inst] Decruft: Don't do "upgrade from previous install" actions.
+
+	These are properly the duty of "make uninstall"
+	for the previous release.
+
+	* Makefile.am (retired): Delete var.
+	(install-data-hook): Don't delete $(ddir)/postgres-sup.*;
+	don't delete $(retired) and contents.
+
 2011-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[build int] Use Guile-BAUX for init snarfing.
